# Personal-Moodboard-Generator

./: .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt
backend/: .env.example  __init__.py  app.py  config.py  main.py  requirements.txt
backend/models/: __init__.py  schemas.py
backend/routes/: __init__.py  health.py  moodboards.py
backend/services/: __init__.py  clusterer.py  feature_extractor.py  image_loader.py  moodboard_generator.py  unsplash_client.py
backend/utils/: __init__.py  errors.py  response.py  validators.py
frontend/: app.js  index.html  styles.css
moodboard/: __init__.py  cli.py  generator.py  palettes.py
tests/: test_generator.py
